--- a/user/css/style.css
+++ b/user/css/style.css
@@ -108,6 +108,20 @@
 /* === SCSS Compass Functions === */
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap");
 
+@media (max-width: 768px) {
+  .content-wrapper {
+    padding: 0 !important;
+  }
+
+  .navbar .navbar-brand-wrapper {
+    width: 75% !important;
+  }
+
+  .navbar .navbar-brand-wrapper .navbar-brand.brand-logo {
+    display: block !important;
+  }
+}
+
 @-webkit-keyframes flash {
   0% {
     opacity: 1; }
